--- a/app/package.json
+++ b/app/package.json
@@ -11,36 +11,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.1.0",
-    "@angular/cdk": "^12.1.0",
-    "@angular/common": "~12.1.0",
-    "@angular/compiler": "~12.1.0",
-    "@angular/core": "~12.1.0",
+    "@angular/animations": "~12.1.1",
+    "@angular/cdk": "^12.1.1",
+    "@angular/common": "~12.1.1",
+    "@angular/compiler": "~12.1.1",
+    "@angular/core": "~12.1.1",
     "@angular/fire": "^6.1.5",
-    "@angular/forms": "~12.1.0",
-    "@angular/material": "^12.1.0",
-    "@angular/platform-browser": "~12.1.0",
-    "@angular/platform-browser-dynamic": "~12.1.0",
-    "@angular/router": "~12.1.0",
+    "@angular/forms": "~12.1.1",
+    "@angular/material": "^12.1.1",
+    "@angular/platform-browser": "~12.1.1",
+    "@angular/platform-browser-dynamic": "~12.1.1",
+    "@angular/router": "~12.1.1",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@types/chart.js": "^2.9.33",
+    "angular-bootstrap-md": "^11.1.0",
     "angular-in-memory-web-api": "^0.11.0",
-    "firebase": "^8.6.8",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.0.2",
+    "chart.js": "^2.9.3",
+    "firebase": "^8.7.0",
+    "hammerjs": "^2.0.8",
     "json-server": "^0.16.3",
-    "npm-check-updates": "^11.7.1",
-    "rxjs": "~7.1.0",
+    "ng2-charts": "^2.2.3",
+    "npm-check-updates": "^11.8.1",
+    "rxjs": "~7.2.0",
     "tslib": "^2.3.0",
-    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.1.0",
-    "@angular/cli": "~12.1.0",
-    "@angular/compiler-cli": "~12.1.0",
-    "@angular/language-service": "~12.1.0",
-    "@types/node": "~15.12.5",
+    "@angular-devkit/build-angular": "~12.1.1",
+    "@angular/cli": "~12.1.1",
+    "@angular/compiler-cli": "~12.1.1",
+    "@angular/language-service": "~12.1.1",
+    "@types/node": "~16.0.0",
     "@types/jasmine": "~3.7.7",
     "@types/jasminewd2": "~2.0.9",
     "codelyzer": "^6.0.2",
-    "jasmine-core": "~3.7.1",
+    "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
@@ -50,6 +57,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~10.0.0",
     "tslint": "~5.20.1",
-    "typescript": "~4.3.4"
+    "typescript": "~4.3.5"
   }
 }
