--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "system-quotes",
+  "name": "maya-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -r esm server.js"
+    "start": "nodemon server.js",
+    "prod": "node server.js"
   },
   "dependencies": {
     "binance-api-node": "^0.11.3",
@@ -14,10 +15,10 @@
     "express": "^4.17.1",
     "firebase": "^8.6.8",
     "fs": "0.0.1-security",
-    "nanoid": "^3.1.23"
+    "nanoid": "^3.1.23",
+    "nodemon": "^2.0.7"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
   },
   "author": "",
   "license": "ISC"
